@@ -1,3 +1,7 @@
+Current:
+- First draft of shipping estimator
+- removed popup_ prefix from popup views
+
 Release 0.6.0:
 - Fixed missing file permission check for creating dummy sidebar boxes
 - Refactored result list, filter an sort classes
